--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
+* {
+  box-sizing: border-box; }
+
 body {
-  background-color: dodgerblue;
-  color: white;
-}
+  margin: 0;
+  font-size: 24px; }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid;
+  padding: 10px 0; }
+
+.game {
+  width: 600px;
+  height: 600px;
+  margin: auto;
+  padding: 50px; }
+
+.grid {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap; }
+
+.grid div {
+  width: calc(100% / 6);
+  height: calc(100% / 6);
+  border: 2px dashed black; }
+
+.turret {
+  background-image: url(dwain.jpeg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.invader {
+  background-image: url(pint.jpeg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.missile {
+  background-image: url(phones.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
