--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,52 +1,61 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
-  font-size: 24px; }
+  font-size: 24px;
+}
 
 header {
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid;
-  padding: 10px 0; }
+  padding: 10px 0;
+}
 
 h1 {
-  background-color: dodgerblue; }
+  background-color: dodgerblue;
+}
 
 .game {
   width: 600px;
   height: 600px;
   margin: auto;
-  padding: 50px; }
+  padding: 50px;
+}
 
 .grid {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .grid div {
   width: calc(100% / 10);
   height: calc(100% / 10);
-  border: 1px dashed black; }
+  border: 1px dashed black;
+}
 
 .turret {
   background-image: url(dwain.jpeg);
   background-size: contain;
   background-repeat: no-repeat;
-  background-posaition: center; }
+  background-posaition: center;
+}
 
 .invader {
   background-image: url(pint.jpeg);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+}
 
 .missile {
   background-image: url(phones.jpg);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
 
-/*# sourceMappingURL=style.css.map */
+}
