--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,8 +33,8 @@ h1 {
 }
 
 .grid div {
-  width: calc(100% / 10);
-  height: calc(100% / 10);
+  width: calc(100% / 7);
+  height: calc(100% / 7);
   border: 1px dashed black;
 }
 
@@ -42,7 +42,7 @@ h1 {
   background-image: url(dwain.jpeg);
   background-size: contain;
   background-repeat: no-repeat;
-  background-posaition: center;
+  background-position: center;
 }
 
 .invader {
