--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,3 +59,10 @@ h1 {
   background-position: center;
 
 }
+
+.bomb {
+  background-image: url(phones.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
