switched to colours, focusing on classes

--- a/css/style.css
+++ b/css/style.css
@@ -32,25 +32,37 @@ h1 {
   border: 1px dashed black; }
 
 .turret {
-  background-image: url(dwain.jpeg);
+  background-color: green;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .invader {
-  background-image: url(pint.jpeg);
+  background-color: red;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .missile {
-  background-image: url(phones.jpg);
+  background-color: dodgerblue;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .bomb {
   background-image: url(phones.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.hit {
+  background-color: purple;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.explosion {
+  background-color: yellow;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
