got an array with hit invaders in. Has t be a win

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ h1 {
   background-position: center; }
 
 .bomb {
-  background-image: url(phones.jpg);
+  background-color: grey;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
