--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,7 @@ h1 {
 }
 
 .bomb {
-  background-image: url(phones.jpg);
+  background-color: grey;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
