--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,3 +80,10 @@ h1 {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.turretExplosion {
+  background-color: orange;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
