--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 
 body {
   margin: 0;
-  font-size: 24px; }
+  font-size: 24px;
+  background-color: #000000; }
 
 header {
   display: flex;
@@ -32,25 +33,25 @@ h1 {
   border: 1px dashed black; }
 
 .turret {
-  background-color: green;
+  background-image: url(turret.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .invader {
-  background-color: red;
+  background-image: url(alienContrast.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .missile {
-  background-color: dodgerblue;
+  background-image: url(laserBlue.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
 
 .bomb {
-  background-color: grey;
+  background-color: red;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
