--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ h1 {
 
 .grid div {
   width: calc(100% / 10);
-  height: calc(100% / 10);
-  border: 1px dashed black; }
+  height: calc(100% / 10); }
 
 .turret {
   background-image: url(turret.png);
@@ -39,7 +38,7 @@ h1 {
   background-position: center; }
 
 .invader {
-  background-image: url(alienContrast.png);
+  background-image: url(invaderGreen.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
@@ -51,7 +50,7 @@ h1 {
   background-position: center; }
 
 .bomb {
-  background-color: red;
+  background-image: url(bombPurple.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
@@ -69,9 +68,21 @@ h1 {
   background-position: center; }
 
 .turretExplosion {
-  background-color: orange;
+  background-image: url(stars.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
+
+.turretExplosionTop {
+  background-image: url(turretExpTop.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom; }
+
+.turretExplosionBot {
+  background-image: url(turretExpBot.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top; }
 
 /*# sourceMappingURL=style.css.map */
