--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,27 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   border-bottom: 2px solid;
-  padding: 10px 0; }
+  padding: 10px 0;
+  font-family: 'Poiret One', cursive;
+  font-size: 30px;
+  color: #e200ff;
+  margin: 0; }
 
-h1 {
-  background-color: dodgerblue; }
+p {
+  margin: 0 50px; }
+
+.score {
+  margin: 0;
+  width: 30px; }
+
+.reset {
+  font-family: 'Poiret One', cursive;
+  color: #e200ff;
+  font-size: 20px;
+  background-color: black;
+  border: 2px solid; }
 
 .game {
   width: 600px;
@@ -62,7 +77,7 @@ h1 {
   background-position: center; }
 
 .explosion {
-  background-color: yellow;
+  background-image: url(invaderExp.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
@@ -84,5 +99,13 @@ h1 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top; }
+
+/*Specify in CSS
+Use the following CSS rules to specify these families:
+
+font-family: 'Darker Grotesque', sans-serif;
+font-family: 'Poiret One', cursive;
+font-family: 'Julius Sans One', sans-serif;
+font-family: 'Codystar', cursive;*/
 
 /*# sourceMappingURL=style.css.map */
