--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,7 +58,7 @@ p {
 }
 
 .turret {
-  background-image: url(/turret.png);
+  background-image: url(turret.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
